fix(search): fix searchbar toolbar bug on ios

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,12 +17,11 @@ ion-menu.md ion-list {
   padding: 10px 0;
 }
 
-ion-menu.md ion-note {
-  margin-bottom: 30px;
+ion-menu ion-note {
+  padding: 0px 0px 20px 6px;
 }
 
-ion-menu.md ion-list-header,
-ion-menu.md ion-note {
+ion-menu.md ion-list-header {
   padding-left: 10px;
 }
 
@@ -71,15 +70,6 @@ ion-menu.ios ion-item {
 
 ion-menu.ios ion-item.selected ion-icon {
   color: var(--ion-color-primary);
-}
-
-ion-menu.ios ion-item ion-icon {
-  font-size: 24px;
-  color: #73849a;
-}
-
-ion-menu.ios ion-list#labels-list ion-list-header {
-  margin-bottom: 8px;
 }
 
 ion-menu.ios ion-list-header,
